--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "minimal-type-guard-helpers",
   "type": "module",
-  "version": "0.1.1",
-  "description": "minimal type-guard helpers",
+  "version": "0.2.0",
+  "description": "provides few helpers to create type guards",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
-    "check_types": "tsc --noEmit --project ."
+    "check_types": "tsc --noEmit --project .",
+    "prettier": "npx prettier --write ."
   },
   "keywords": [
     "minimal",
@@ -27,6 +28,7 @@
   "author": "Gianluca Casati (https://fibo.github.io/)",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.5.1"
+    "@types/node": "^20.5.1",
+    "typescript": "^5.2.2"
   }
 }
